--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.13",
     "bootstrap": "^5.1.1",
+    "faker": "^5.5.3",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@types/react-router-dom": "^5.3.1"
   }
 }
