--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/body-scroll-lock": "^3.1.0",
     "@types/node-sass": "^4.11.2",
-    "@types/react-outside-click-handler": "^1.3.0"
+    "@types/react-outside-click-handler": "^1.3.0",
+    "@types/react-slick": "^0.23.7"
   }
 }
