--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/react-dom": "^17.0.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
-    "node-sass": "^5.0.0",
+    "faker": "^5.5.3",
+    "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-outside-click-handler": "^1.3.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/faker": "^5.5.9",
     "@types/node-sass": "^4.11.2",
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-slick": "^0.23.7"
