--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_API_BASE_URL=https://cryptowall-nft-backend.herokuapp.com/
-REACT_APP_BASE_URL=https://digidrip.com/
+REACT_APP_BASE_URL=https://CryptoWall.com/
